added initial game galactic-quest as a submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "snake-game-js"]
 	path = snake-game-js
 	url = https://github.com/Shokhrukh2004/snake-game-js.git
+[submodule "galactic-quest-java"]
+	path = galactic-quest-java
+	url = https://github.com/Shokhrukh2004/galactic-quest-java.git
